# RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  README.md  conftest.py  main.py  pyproject.toml
.github/skills/auto-coder/: .spec_hash
.github/skills/auto-coder/references/: 06-schedule.md  07-future.md
.github/skills/auto-coder/scripts/: init_a1.py
.github/skills/resume-writer/: SKILL.md
.github/skills/resume-writer/references/: project_highlights.md
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py
src/core/: __init__.py  settings.py  types.py
src/core/query_engine/: dense_retriever.py  fusion.py  hybrid_search.py  query_processor.py  reranker.py  sparse_retriever.py
src/core/response/: citation_generator.py  multimodal_assembler.py  response_builder.py
src/core/trace/: trace_collector.py  trace_context.py
src/ingestion/: document_manager.py  pipeline.py
src/ingestion/chunking/: document_chunker.py
src/ingestion/embedding/: batch_processor.py  dense_encoder.py  sparse_encoder.py
src/ingestion/storage/: bm25_indexer.py  image_storage.py  vector_upserter.py
src/ingestion/transform/: base_transform.py  chunk_refiner.py  image_captioner.py  metadata_enricher.py
src/libs/embedding/: azure_embedding.py  base_embedding.py  embedding_factory.py  ollama_embedding.py  openai_embedding.py
src/libs/evaluator/: base_evaluator.py  custom_evaluator.py  evaluator_factory.py  ragas_evaluator.py
src/libs/llm/: azure_llm.py  azure_vision_llm.py  base_llm.py  base_vision_llm.py  deepseek_llm.py  llm_factory.py  ollama_llm.py  openai_llm.py
src/libs/loader/: base_loader.py  file_integrity.py  pdf_loader.py
src/libs/reranker/: base_reranker.py  cross_encoder_reranker.py  llm_reranker.py  reranker_factory.py
src/libs/splitter/: __init__.py  base_splitter.py  fixed_length_splitter.py  recursive_splitter.py  semantic_splitter.py  splitter_factory.py
src/libs/vector_store/: base_vector_store.py  chroma_store.py  vector_store_factory.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/mcp_server/tools/: get_document_summary.py  list_collections.py  query_knowledge_hub.py
src/observability/: logger.py
src/observability/dashboard/: app.py
src/observability/dashboard/pages/: data_browser.py  evaluation_panel.py  ingestion_manager.py  ingestion_traces.py  overview.py  query_traces.py
src/observability/dashboard/services/: config_service.py  data_service.py  trace_service.py
src/observability/evaluation/: composite_evaluator.py  eval_runner.py
tests/fixtures/sample_documents/: sample.md
tests/unit/: test_config_loading.py  test_smoke_imports.py
