[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smart-knowledge-hub"
version = "0.1.0"
description = "Modular RAG Knowledge Hub with MCP Server and Streamlit Dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Smart Knowledge Hub Team" }]

dependencies = [
    # --- Core ---
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # --- MCP Protocol ---
    "mcp>=1.0",

    # --- Document Parsing ---
    "markitdown>=0.0.1",

    # --- LLM & Embedding ---
    "openai>=1.30",
    "httpx>=0.27",

    # --- Vector Store ---
    "chromadb>=0.5",

    # --- Text Splitting ---
    "langchain-text-splitters>=0.2",

    # --- Reranking ---
    "sentence-transformers>=3.0; extra == 'reranker'",

    # --- Dashboard ---
    "streamlit>=1.35",

    # --- Evaluation ---
    "ragas>=0.1; extra == 'eval'",

    # --- Utilities ---
    "tqdm>=4.66",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
reranker = ["sentence-transformers>=3.0"]
eval = ["ragas>=0.1", "deepeval>=0.21"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
smart-knowledge-hub = "main:main"

# -----------------------------------------------------------------------
# Setuptools: src layout
# -----------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# -----------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: pure unit tests (no external I/O)",
    "integration: tests that require real backends",
    "e2e: end-to-end tests",
    "slow: long-running tests",
]

# -----------------------------------------------------------------------
# Ruff (Linting & Formatting)
# -----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "RUF"]
ignore = ["E501"]

# -----------------------------------------------------------------------
# mypy
# -----------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
